fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 html {
     height: 100%;
     width: 100%;
+    max-height: 100%;
+    overflow: hidden;
     background: linear-gradient(to bottom right, #667eea, #764ba2);
 }
 
